--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>Flower is jasmin.white in color and smells very good</p>
+	</div>
+	<div>
+		<h1 id="f2">Rose photos</h1>
+		<p>Red in color and smells very good</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
