--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<p>Flower is jasmin.white in color and smells very good</p>
 	</div>
 	<div>
-		<h1 id="f2">Rose photos</h1>
+		<h1 id="f2">Rose pictures</h1>
 		<p>Red in color and smells very good</p>
 	</div>
     <script type="text/javascript" src="./script.js">
